

                                        XFLR5

                     A tool for the design of Airfoils, Wings and Planes
                          operating at low Reynolds numbers

                                 Copyright (C) 2003-2016

                                     Andre Deperrois


*******************************************************************************


xflr5 v6.33
	- corrected the calculation of the damping ratio; was formerly lambda.real()/omega_damped instead of lambda.real()/omega_natural
	- reorganized the library structure; the XFoil library is now limited to the XFoil class
	- bug corrections and minor enhancements

xflr5 v6.32 January 8th, 2017
	- bug corrections and improvements to the xfoil direct analysis module


xflr5 v6.31 January 6th, 2017 - Not Released
	- added a "light theme" option
	- corrected the calculation of the tail volume when the main wing is not located at the origin;			
      note that the tail volume value is not used in the calculation, it is only provided for information.
	- allowed multiple import and export of Planes and Analysis objects from text and xml files
	- moved the execution of LLT and Panel Analysis to separate threads
	- set the default reference area for plane analysis to the projected area on the x-y plane
	- bug corrections and minor enhancements


xflr5 v6.30 November 6th, 2016
	- updated the license from GPL v2 to v3
	- separated the GUI from the analysis engines
	- added an option to hide flap moments in the operating view
	- added a style property for foil points
	- corrected and improved the calculation and display of analysis with sideslip; impact on results
	- code cleaning
	- bug corrections and minor enhancements


xflr5 v6.14 May 29th, 2016
	- modified the calculation of stability derivatives to take into account viscous drag and extra drag
	- added mass and CoG position to the list of variables for stability polar graphs